--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -673,16 +673,16 @@ every element of $Q_1$ intersects every member of $Q_2$: more formally $Q_1
 
 In the original presentation of the Synod algorithm any (weighted) majority of
 the nodes could be used as a quorum: roughly speaking, \[Q^\textrm{I}(p_1) =
-Q^\textrm{II}(p_2) = \{ q \mid q \text{ is a majority }\}\] was a constant, and
-any two majorities must intersect: $Q_\mathrm{maj} \smile Q_\mathrm{maj}$.
-
-The ability to vary the set of quorums by proposal and by phase is the key
+Q^\textrm{II}(p_2) = \{ q \mid q \text{ is a majority}\}\] was a constant, and
+all majorities intersect: $Q^\textrm{I}(p_1) \smile Q^\textrm{II}(p_2)$ for all
+$p_1$ and $p_2$. This intersection property is stronger than needed, and the
+ability to vary the set of quorums by proposal and by phase is the key
 ingredient in being able to perform jitter-free membership changes. The proof
 of theorem \ref{synod-safety-theorem} in appendix \ref{synod-safety} is a
 generalisation of the original one to demonstrate that consistency is preserved
-even when $Q^\textrm{I}(p_1) \ne Q^\textrm{II}(p_2)$ as long as
-$Q^\textrm{I}(p_1) \smile Q^\textrm{II}(p_2)$ for all proposals $p_1 \succ p_2$
-having $\prop{}{p_1}$ and $\chosen{}{p_2}$.
+even under the weaker assumption that $Q^\textrm{I}(p_1) \ne
+Q^\textrm{II}(p_2)$ as long as $Q^\textrm{I}(p_1) \smile Q^\textrm{II}(p_2)$
+for all proposals $p_1 \succ p_2$ having $\prop{}{p_1}$ and $\chosen{}{p_2}$.
 
 \section{Membership changes}\label{membership-changes}
 
