--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -680,9 +680,10 @@ ability to vary the set of quorums by proposal and by phase is the key
 ingredient in being able to perform jitter-free membership changes. The proof
 of theorem \ref{synod-safety-theorem} in appendix \ref{synod-safety} is a
 generalisation of the original one to demonstrate that consistency is preserved
-even under the weaker assumption that $Q^\textrm{I}(p_1) \ne
-Q^\textrm{II}(p_2)$ as long as $Q^\textrm{I}(p_1) \smile Q^\textrm{II}(p_2)$
-for all proposals $p_1 \succ p_2$ having $\prop{}{p_1}$ and $\chosen{}{p_2}$.
+in the Synod algorithm even under the weaker assumption that $Q^\textrm{I}(p_1)
+\ne Q^\textrm{II}(p_2)$ as long as $Q^\textrm{I}(p_1) \smile
+Q^\textrm{II}(p_2)$ for all proposals $p_1 \succ p_2$ having $\prop{}{p_1}$ and
+$\chosen{}{p_2}$.
 
 \section{Membership changes}\label{membership-changes}
 
