--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -737,7 +737,7 @@ $Q_{e(i)}$. This will be known if the node has chosen the previous instance,
 because if $\chosen{i-1}{p'}$ then $i < i_\mathrm{max}$ and hence ${e(i) \le
 e(i_\mathrm{max}) \le e_\mathrm{max}}$ as required.
 
-\subsection{Allowing for membership changes...}
+\subsection{Jitter-freedom}
 
 TODO do this the same, but better
 
@@ -758,19 +758,18 @@ jitter if it is delayed. Typically, as with Cheap Paxos, this new phase I is
 run on a subset of all the nodes while the remaining nodes continue to run
 phase II on proposal $p$.
 
-
-\subsection{Examples of membership changes}\label{types-of-membership-change}
+\subsection{Examples}\label{types-of-membership-change}
 
 \def\maj#1{\mathbf{maj}(#1)}
 
-Implementations can ensure $Q_e \smile Q_e$ by, for instance, arranging for
-each quorum in $Q_e$ to comprise a majority subset of some finite set of nodes.
-If $Q_{e-1}$ and $Q_e$ are nonempty then intuitively the condition that
-$Q_{e-1} \smile Q_e$ ensures that the membership change from $Q_{e-1}$ to $Q_e$
-is sufficiently small that phase I need not re-run when moving from epoch $e-1$
-to epoch $e$.  For instance, if $Q_{e-1} \smile Q_{e-1}$ then the trivial
-membership change, having $Q_e = Q_{e-1}$, certainly satisfies $Q_e \smile
-Q_{e-1}$ and $Q_e \smile Q_e$.
+Implementations can ensure $Q_e \smile Q_e$ for each $e$ by, for instance,
+arranging for each quorum in $Q_e$ to comprise a (weighted) majority subset of
+some finite set of nodes.  If $Q_{e-1}$ and $Q_e$ are nonempty then intuitively
+the condition that $Q_{e-1} \smile Q_e$ ensures that the membership change from
+$Q_{e-1}$ to $Q_e$ is sufficiently small that phase I need not re-run when
+moving from epoch $e-1$ to epoch $e$.  For instance, if $Q_{e-1} \smile
+Q_{e-1}$ then the trivial membership change, having $Q_e = Q_{e-1}$, certainly
+satisfies $Q_e \smile Q_{e-1}$ and $Q_e \smile Q_e$.
 
 For a less trivial example, let \[\maj{s} = \{ q \subseteq s \mid 2 |q| > |s|
 \}\] be the set of all majority subsets of a finite set $s \subseteq \mathbb
